# gigabyte-gpu-lcd

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: hardware-notes.md  lessons-learned.md  protocol.md  publish.md
examples/: rainbow_text.py  status_image.py
src/gigabyte_lcd/: __init__.py  cli.py  device.py  protocol.py  render.py  status.py  transport.py
tests/: test_cli.py  test_protocol.py  test_render.py
