[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "gigabyte-gpu-lcd"
version = "0.1.0"
description = "Linux control library and CLI for Gigabyte AORUS GPU LCD panels"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "maheidem" }
]
keywords = ["gigabyte", "aorus", "gpu", "lcd", "linux", "i2c", "reverse-engineering"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Hardware",
]
dependencies = [
  "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.0",
]

[project.scripts]
gigabyte-lcd = "gigabyte_lcd.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gigabyte_lcd"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
